refactor: replace deprecated Class#newInstance() with getDeclaredConstructor().newInstance()
Remove Java 8-era reflection assumptions across groovity-core:
- Groovity.java: replace 3 newInstance() calls, add proper exception handling
- GroovityObjectConverter.java: use getDeclaredConstructor() for List/Map instantiation
- ModelCopier.java: use getDeclaredConstructor() in makeNew()
- Http.java, Parse.java: use getDeclaredConstructor() for target class instantiation
- Retain CompilerConfiguration.JDK8 flag (valid for Java 17; enables invokedynamic)

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>